[tool.poetry]
name = "pyenv-settings"
version = "0.1.0"
description = ""
authors = ["jswon-dev <jswon.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "pyenv_settings"}]

[tool.poetry.dependencies]
python = "3.9.17"
ipykernel = "^6.24.0"
prophet = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
